# bridge

./: .env  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/bridge_core_icp_backend/: Cargo.toml  bridge_core_icp_backend.did
src/bridge_core_icp_backend/src/: lib.rs  networks.rs  tests.rs
src/bridge_core_icp_backend/src/helpers/: ecdsa.rs  encoding.rs  mod.rs
src/bridge_core_icp_frontend/src/: index.html  index.js
