[package]
name = "bridge_core_icp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
hex = "0.4.3"
ic-web3 = "0.1.7"
ethabi = "18.0.0"
secp256k1 = "0.27.0"
lazy_static = "1.4.0"
thiserror = "1.0.40"
k256 = "0.13.1"
